--- a/src/UI/CustomButton/CustomButton.module.sass
+++ b/src/UI/CustomButton/CustomButton.module.sass
@@ -10,7 +10,7 @@
   cursor: pointer
   background-color: #1f1b2e
   border: 1px solid #1f1b2e
-  color: white
+  color: vars.$whiteTextColor
   font-size: vars.$fontsize
   font-weight: 500
   transition: .4s
@@ -74,8 +74,8 @@
   &_frame
     background: none
     border: 1px solid rgba(255, 255, 255, .32)
-    color: #fff
+    color: vars.$whiteTextColor
 
     &:hover
       background: none
-      border: 1px solid #fff
+      border: 1px solid vars.$whiteTextColor
