--- a/src/UI/MovieCard/MovieCardDefault/MovieCardButtons/MovieCardButtons.module.sass
+++ b/src/UI/MovieCard/MovieCardDefault/MovieCardButtons/MovieCardButtons.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .buttons
   display: flex
   flex-direction: column
@@ -22,7 +24,7 @@
     font-family: 'ivi-icons'
     font-style: normal
     font-size: 18px
-    color: #fff
+    color: vars.$whiteTextColor
     line-height: 20px
 
   &_save::after
