--- a/src/UI/MovieSlider/MovieSlider.module.sass
+++ b/src/UI/MovieSlider/MovieSlider.module.sass
@@ -1,3 +1,4 @@
+@use "src/styles/vars"
 
 .wrapper
     padding: 24px 0
@@ -8,7 +9,7 @@
 
 .title
     font-size: 24px
-    color: #fff
+    color: vars.$whiteTextColor
     display: flex
     align-items: center
     line-height: 28px
