--- a/src/UI/ToggleSwitch/ToggleSwitch.module.sass
+++ b/src/UI/ToggleSwitch/ToggleSwitch.module.sass
@@ -40,7 +40,7 @@
     border-radius: 45px
     transition: 0.2s
     opacity: 0.15
-    background: #fff
+    background: vars.$whiteTextColor
     box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29)
 
   .checkbox:checked + .label .button
