--- a/src/components/Catalog/Filters/MultiSelector/ListItem/ListItem.module.sass
+++ b/src/components/Catalog/Filters/MultiSelector/ListItem/ListItem.module.sass
@@ -1,3 +1,5 @@
+@use "/src/styles/vars"
+
 .item
   padding-top: 12px
   display: flex
@@ -10,7 +12,7 @@
   cursor: pointer
 
   &:hover, &_active
-    color: white
+    color: vars.$whiteTextColor
 
   &:hover &__checkbox
     opacity: 1
@@ -27,7 +29,7 @@
 
     &_active
       opacity: 1
-      color: white
+      color: vars.$whiteTextColor
 
     &::before
       content: "\E348"
