--- a/src/components/Catalog/Filters/RangeSelector/RangeSelector.module.sass
+++ b/src/components/Catalog/Filters/RangeSelector/RangeSelector.module.sass
@@ -11,14 +11,14 @@
 
   &__title
     grid-area: title
-    color: white
+    color: vars.$whiteTextColor
     font-weight: 500
 
   &__value
     grid-area: value
 
     & > span
-      color: white
+      color: vars.$whiteTextColor
       font-weight: 500
 
   &__input
