--- a/src/components/Catalog/Filters/ResetButton/ResetButton.module.sass
+++ b/src/components/Catalog/Filters/ResetButton/ResetButton.module.sass
@@ -5,7 +5,7 @@
   align-items: center
   background: transparent
   cursor: pointer
-  color: white
+  color: vars.$whiteTextColor
   gap: 8px
   padding-inline: 8px
   transition: .4s
