--- a/src/components/Catalog/Sorting/SortingTitle/SortingTitle.module.sass
+++ b/src/components/Catalog/Sorting/SortingTitle/SortingTitle.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .title
   display: flex
   gap: 8px
@@ -10,7 +12,7 @@
   text-overflow: ellipsis
   height: 20px
   cursor: pointer
-  color: white
+  color: vars.$whiteTextColor
 
   &__icon
     transform: scale(-1,1)
