--- a/src/components/Home/BannerSlider/BannerSlide/BannerSlide.module.sass
+++ b/src/components/Home/BannerSlider/BannerSlide/BannerSlide.module.sass
@@ -43,12 +43,12 @@
             height: auto
 
         &__title
-            color: #fff
+            color: vars.$whiteTextColor
             margin-bottom: 8px
             font-size: 56px
 
         &__text
-            color: #fff
+            color: vars.$whiteTextColor
             margin-bottom: 24px
 
         &__button
@@ -57,7 +57,7 @@
             border-radius: 8px
             padding: 9px 15px
             background-color: vars.$accent
-            color: #fff
+            color: vars.$whiteTextColor
             cursor: pointer
 
 @media (max-width: 1199.98px)
