--- a/src/components/Home/TopTen/TopTen.module.sass
+++ b/src/components/Home/TopTen/TopTen.module.sass
@@ -1,3 +1,4 @@
+@use "src/styles/vars"
 
 .section
     overflow: hidden
@@ -5,7 +6,7 @@
 
     &__title
         font-size: 24px
-        color: #fff
+        color: vars.$whiteTextColor
         display: flex
         align-items: center
 
