--- a/src/components/Layout/Footer/FooterTop/FooterTop.module.sass
+++ b/src/components/Layout/Footer/FooterTop/FooterTop.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .top
   display: grid
   grid-template-columns: 1fr 1fr 1fr 1fr
@@ -7,7 +9,7 @@
 
   &__title
     display: block
-    color: white
+    color: vars.$whiteTextColor
     margin-bottom: 8px
     font-weight: 700
     font-size: 15px
