--- a/src/components/Layout/Footer/FooterWidget/FooterWidget.module.sass
+++ b/src/components/Layout/Footer/FooterWidget/FooterWidget.module.sass
@@ -27,7 +27,7 @@ $end: #834CC2
 
   &__svg
     display: flex
-    color: white
+    color: vars.$whiteTextColor
     position: relative
 
   &__text
