--- a/src/components/Layout/Header/DropDown/Links/Links.module.sass
+++ b/src/components/Layout/Header/DropDown/Links/Links.module.sass
@@ -5,7 +5,7 @@
     width: 350px
 
   &__title
-    color: #fff
+    color: vars.$whiteTextColor
     font-size: 15px
     font-weight: 700
     line-height: 16px
@@ -29,4 +29,4 @@
     transition-duration: .4s
 
     &:hover
-      color: #fff
+      color: vars.$whiteTextColor
