--- a/src/components/Layout/Header/DropDown/ProfileDropDown/ProfileDropDown.module.sass
+++ b/src/components/Layout/Header/DropDown/ProfileDropDown/ProfileDropDown.module.sass
@@ -29,7 +29,7 @@
       .card__text
         font-size: 15px
         font-weight: 500
-        color: #fff
+        color: vars.$whiteTextColor
 
       .card__icon
         svg
@@ -56,4 +56,4 @@
         transition: all .2s
 
         &:hover
-          color: #fff
+          color: vars.$whiteTextColor
