--- a/src/components/Layout/Header/DropDown/Tabs/Tabs.module.sass
+++ b/src/components/Layout/Header/DropDown/Tabs/Tabs.module.sass
@@ -13,5 +13,5 @@
     padding-left: 16px
 
     &:hover
-      color: #fff
-      border-left: 1px solid #fff
+      color: vars.$whiteTextColor
+      border-left: 1px solid vars.$whiteTextColor
