--- a/src/components/Layout/Header/DropDown/TvDropDown/TvDropDown.module.sass
+++ b/src/components/Layout/Header/DropDown/TvDropDown/TvDropDown.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .tv
   &__left_content
     display: flex
@@ -12,7 +14,7 @@
         &__title
           font-size: 15px
           font-weight: 700
-          color: #fff
+          color: vars.$whiteTextColor
 
         &_button
           width: 100%
@@ -36,4 +38,4 @@
       font-size: 15px
       font-weight: 700
       margin-bottom: 12px
-      color: #fff
+      color: vars.$whiteTextColor
