--- a/src/components/Layout/Header/DropDown/TvDropDown/TvLinks/TvLinks.module.sass
+++ b/src/components/Layout/Header/DropDown/TvDropDown/TvLinks/TvLinks.module.sass
@@ -5,7 +5,7 @@
     &_title
       font-size: 15px
       font-weight: 700
-      color: #fff
+      color: vars.$whiteTextColor
 
     &_list
       font-size: 15px
@@ -18,4 +18,4 @@
         transition: all .4s
 
       a:hover
-        color: #fff
+        color: vars.$whiteTextColor
