--- a/src/components/Layout/Header/HeaderWidget/WidgetBottom/BottomInfo/BottomInfo.module.sass
+++ b/src/components/Layout/Header/HeaderWidget/WidgetBottom/BottomInfo/BottomInfo.module.sass
@@ -19,7 +19,7 @@
     @include bottom.textDef
 
   &__title
-    color: white
+    color: vars.$whiteTextColor
     font-size: 20px
     font-weight: 700
     height: 24px
