--- a/src/components/Layout/Header/Navigation/Navigation.module.sass
+++ b/src/components/Layout/Header/Navigation/Navigation.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .nav
   display: flex
   height: 100%
@@ -15,4 +17,4 @@
     transition-duration: .4s
 
     &:hover
-      color: #fff
+      color: vars.$whiteTextColor
