--- a/src/components/Layout/MobileMenu/MobileMenu.module.sass
+++ b/src/components/Layout/MobileMenu/MobileMenu.module.sass
@@ -95,7 +95,7 @@
         opacity: 1
 
       .item_selected
-        color: #fff
+        color: vars.$whiteTextColor
 
         &:before
-          color: #fff
+          color: vars.$whiteTextColor
