--- a/src/components/ModalWindows/AuthModal/ChatDialogue/ChatDialogue.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatDialogue/ChatDialogue.module.sass
@@ -7,7 +7,7 @@
   max-height: 72px
 
 @mixin chatMessageTitle
-  color: #fff
+  color: vars.$whiteTextColor
   font-size: 15px
   line-height: 20px
   font-weight: 700
@@ -88,4 +88,4 @@
     left: 30%
     content: "\E0D6"
     font-family: iconfont, sans-serif
-    color: #fff
+    color: vars.$whiteTextColor
