--- a/src/components/ModalWindows/AuthModal/ChatDialogue/PrivacyPolicy/PrivacyPolicy.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatDialogue/PrivacyPolicy/PrivacyPolicy.module.sass
@@ -7,11 +7,11 @@
 
   &__link
     box-shadow: 0 2px 0 #7e798f, inset 0 0 0 #7e798f
-    color: #fff
+    color: vars.$whiteTextColor
     transition-duration: .4s
 
     &:visited
-      color: #fff
+      color: vars.$whiteTextColor
 
     &:hover
       background-color: #7e798f
