--- a/src/components/ModalWindows/MovieInfoModal/MovieInfoModal.module.sass
+++ b/src/components/ModalWindows/MovieInfoModal/MovieInfoModal.module.sass
@@ -38,7 +38,7 @@
         font-size: 40px
         line-height: 44px
         font-weight: 900
-        color: #fff
+        color: vars.$whiteTextColor
 
       .tabs
         &__list
@@ -52,7 +52,7 @@
         &__item
           position: relative
           cursor: pointer
-          color: #fff
+          color: vars.$whiteTextColor
           opacity: .72
           font-size: 15px
           line-height: 20px
