--- a/src/components/ModalWindows/SearchModal/SearchModal.module.sass
+++ b/src/components/ModalWindows/SearchModal/SearchModal.module.sass
@@ -12,7 +12,7 @@
     line-height: 44px
     font-weight: 900
     margin-bottom: 40px
-    color: white
+    color: vars.$whiteTextColor
 
   &__container
     display: grid
