--- a/src/components/Movie/CommentsSlider/CommentCard/CommentCard.module.sass
+++ b/src/components/Movie/CommentsSlider/CommentCard/CommentCard.module.sass
@@ -24,7 +24,7 @@
     height: 66px
     -webkit-line-clamp: 3
     white-space: normal
-    color: #fff
+    color: vars.$whiteTextColor
     font-style: normal
     display: -webkit-box
     overflow: hidden
@@ -75,7 +75,7 @@
     transition: .3s
     &:hover
       .icon::after
-        color: #fff
+        color: vars.$whiteTextColor
 
 .icon
   &::after
