--- a/src/components/Movie/CreatorsList/CreatorsList.module.sass
+++ b/src/components/Movie/CreatorsList/CreatorsList.module.sass
@@ -42,7 +42,7 @@
 
       &:hover
         .title, .second__title
-          color: #ffffff
+          color: vars.$whiteTextColor
 
   .more__button
     width: 88px
