--- a/src/components/Movie/MovieInfo/MovieOption/MovieOption.module.sass
+++ b/src/components/Movie/MovieInfo/MovieOption/MovieOption.module.sass
@@ -1,10 +1,12 @@
+@use "src/styles/vars"
+
 .option
   margin-top: 16px
   line-height: 22px
   &:first-child
     margin-top: 0
   &__values
-    color: #fff
+    color: vars.$whiteTextColor
     margin-top: 4px
     display: flex
     flex-wrap: wrap
