--- a/src/components/Movie/MovieInfo/MovieParams/MovieParams.module.sass
+++ b/src/components/Movie/MovieInfo/MovieParams/MovieParams.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .params
   margin-bottom: 24px
 
@@ -33,7 +35,7 @@
     transition: .3s
 
   &__link:hover
-    color: #fff
+    color: vars.$whiteTextColor
 
 .icon
   margin-right: 4px
