--- a/src/components/Movie/WatchAllDevices/WatchAllDevices.module.sass
+++ b/src/components/Movie/WatchAllDevices/WatchAllDevices.module.sass
@@ -18,7 +18,7 @@
       line-height: 28px
       font-weight: 700
       font-style: normal
-      color: #fff
+      color: vars.$whiteTextColor
       margin-bottom: 12px
 
     .subtitle
