--- a/src/styles/_vars.sass
+++ b/src/styles/_vars.sass
@@ -1,7 +1,7 @@
 // USER VARIABLES SECTION
 $accent: #ea003d // Accent Color
 $fontsize: 15px // Body Font Size
-$titlecolor: #ffffff
+$whiteTextColor: #ffffff
 $textcolor: #ffffffb8
 $lineheight: 1.65 // Document Line Height
 $userfont: iviSans // User Font Family
