--- a/src/styles/pages/MoviesPage.module.sass
+++ b/src/styles/pages/MoviesPage.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .page
   display: grid
   gap: 15px
@@ -7,4 +9,4 @@
     font-size: 40px
     line-height: 44px
     font-weight: 700
-    color: white
+    color: vars.$whiteTextColor
