--- a/src/UI/MovieCard/MovieCardDefault/MovieCardDefault.module.sass
+++ b/src/UI/MovieCard/MovieCardDefault/MovieCardDefault.module.sass
@@ -36,7 +36,7 @@
             display: flex
 
         .content__title
-            color: #fff
+            color: vars.$whiteTextColor
 
     &__img
         width: 100%
@@ -107,7 +107,7 @@
         font-size: 20px
         line-height: 24px
         height: 24px
-        color: #fff
+        color: vars.$whiteTextColor
         &_int
             font-size: 24px
 
