--- a/src/UI/MovieCard/MovieCardPoster/MovieCardPoster.module.sass
+++ b/src/UI/MovieCard/MovieCardPoster/MovieCardPoster.module.sass
@@ -62,7 +62,7 @@
         font-size: 20px
         line-height: 24px
         height: 24px
-        color: #fff
+        color: vars.$whiteTextColor
         &_int
             font-size: 24px
 
