--- a/src/UI/MovieCard/MovieCardsRating/MovieCardsRating.module.sass
+++ b/src/UI/MovieCard/MovieCardsRating/MovieCardsRating.module.sass
@@ -1,3 +1,4 @@
+@use "src/styles/vars"
 
 .rating
     display: flex
@@ -17,6 +18,6 @@
         font-size: 20px
         line-height: 24px
         height: 24px
-        color: #fff
+        color: vars.$whiteTextColor
         &_int
             font-size: 24px
