--- a/src/UI/SliderButtons/SliderButtons.module.sass
+++ b/src/UI/SliderButtons/SliderButtons.module.sass
@@ -1,3 +1,4 @@
+@use "src/styles/vars"
 
 .button
     background: none
@@ -25,7 +26,7 @@
             font-family: ivi-icons
             font-style: normal
             font-size: 30px
-            color: #fff
+            color: vars.$whiteTextColor
 
         &_prev::after
             content: '\E009'
