--- a/src/components/Catalog/Filters/FilterTitle/FilterTitle.module.sass
+++ b/src/components/Catalog/Filters/FilterTitle/FilterTitle.module.sass
@@ -11,7 +11,7 @@
   border-radius: 4px
   padding: 8px 16px
   font-weight: 500
-  color: white
+  color: vars.$whiteTextColor
 
   &__text
     display: grid
