--- a/src/components/Catalog/Sorting/SortingOption/SortingOption.module.sass
+++ b/src/components/Catalog/Sorting/SortingOption/SortingOption.module.sass
@@ -3,7 +3,7 @@
 .option
   padding: 12px 16px 12px 20px
   cursor: pointer
-  color: white
+  color: vars.$whiteTextColor
 
   &:hover, &_active
     background: #312b45
