--- a/src/components/Home/CinemaDetails/CinemaDetails.module.sass
+++ b/src/components/Home/CinemaDetails/CinemaDetails.module.sass
@@ -11,13 +11,13 @@
         font-style: normal
         font-weight: 700
         line-height: 24px
-        color: #fff
+        color: vars.$whiteTextColor
 
     &__container
         width: 80%
 
     &__title
-        color: #fff
+        color: vars.$whiteTextColor
         font-size: 20px
 
 .list
@@ -53,7 +53,7 @@
     color: #ffffffe0
     font-weight: 500
     &:hover
-        color: #fff
+        color: vars.$whiteTextColor
 
 @media (max-width: 1019px)
     .section__container
