--- a/src/components/Home/PromoButtons/PromoButtons.module.sass
+++ b/src/components/Home/PromoButtons/PromoButtons.module.sass
@@ -1,3 +1,4 @@
+@use "src/styles/vars"
 
 .section
     padding: 24px 0
@@ -17,7 +18,7 @@
 
     .button
         border-radius: 8px
-        color: #fff
+        color: vars.$whiteTextColor
         text-decoration: none
         text-align: center
         display: flex
