--- a/src/components/Layout/Footer/FooterAsk/FooterAsk.module.sass
+++ b/src/components/Layout/Footer/FooterAsk/FooterAsk.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .ask
   display: grid
 
@@ -9,7 +11,7 @@
     line-height: 16px
     text-decoration: none
     transition: .4s
-    color: white
+    color: vars.$whiteTextColor
 
     &:hover
       color: rgba(255,255,255,.72)
