--- a/src/components/Layout/Header/DropDown/SubscriptionDropdown/SubscriptionDropdown.module.sass
+++ b/src/components/Layout/Header/DropDown/SubscriptionDropdown/SubscriptionDropdown.module.sass
@@ -9,7 +9,7 @@
     margin-top: 30px
 
     .title
-      color: #fff
+      color: vars.$whiteTextColor
       font-size: 28px
       line-height: 32px
       font-weight: 700
@@ -56,14 +56,14 @@
         grid-column: 2 / span 2
 
       .text
-        color: #fff
+        color: vars.$whiteTextColor
         font-size: 15px
         line-height: 20px
         font-weight: 500
 
       .icon
         font-family: iconfont, sans-serif
-        color: #fff
+        color: vars.$whiteTextColor
         font-size: 20px
         opacity: .48
         line-height: 20px
