--- a/src/components/ModalWindows/AuthModal/ChatDialogue/ErrorMessage/ErrorMessage.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatDialogue/ErrorMessage/ErrorMessage.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .container
   width: 80%
 
@@ -11,7 +13,7 @@
 
     .error
       &__title
-        color: #fff
+        color: vars.$whiteTextColor
         font-size: 16px
         line-height: 20px
         font-weight: 700
