--- a/src/components/Movie/CommentsSlider/CommentsSlider.module.sass
+++ b/src/components/Movie/CommentsSlider/CommentsSlider.module.sass
@@ -30,14 +30,14 @@
   line-height: 28px
   font-weight: 700
   font-style: normal
-  color: #fff
+  color: vars.$whiteTextColor
   position: relative
   box-shadow: 0 1px 0 rgb(255 255 255 / 16%), inset 0 0 0 rgb(255 255 255 / 16%)
   cursor: pointer
   transition: .3s
 
   &:hover
-    box-shadow: 0 1px 0 #fff, inset 0 0 0 #fff
+    box-shadow: 0 1px 0 vars.$whiteTextColor, inset 0 0 0 vars.$whiteTextColor
 
   &__counter
     font-size: 13px
