--- a/src/components/Movie/MovieInfo/MovieBadge/MovieBadge.module.sass
+++ b/src/components/Movie/MovieInfo/MovieBadge/MovieBadge.module.sass
@@ -1,10 +1,12 @@
+@use "src/styles/vars"
+
 .badge
   background-color: rgba(255,255,255,.16)
   backdrop-filter: blur(0)
   height: 20px
   padding: 2px 6px
   border-radius: 4px
-  color: #fff
+  color: vars.$whiteTextColor
   font-size: 13px
   line-height: 16px
   box-shadow: 0 4px 12px transparent
