--- a/src/components/Movie/MovieInfo/MovieMedallions/MovieMedallions.module.sass
+++ b/src/components/Movie/MovieInfo/MovieMedallions/MovieMedallions.module.sass
@@ -25,7 +25,7 @@
       background-color: rgba(255, 255, 255, .24)
 
     .medallion__text
-      color: #fff
+      color: vars.$whiteTextColor
 
   &__wrapper
     background-color: rgba(255, 255, 255, .16)
@@ -45,7 +45,7 @@
     align-items: center
     justify-content: center
     border-radius: 8px
-    color: #fff
+    color: vars.$whiteTextColor
 
   &__avatar
     width: 44px
