--- a/src/components/Movie/MovieInfo/MovieRating/MovieRating.module.sass
+++ b/src/components/Movie/MovieInfo/MovieRating/MovieRating.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .rating
   margin-top: 24px
   &__button
@@ -16,7 +18,7 @@
     display: flex
     align-items: center
     justify-content: center
-    color: #fff
+    color: vars.$whiteTextColor
     background-color: #73a32f
     font-size: 24px
     font-weight: 700
@@ -26,7 +28,7 @@
 
   &__title
     font-weight: 500
-    color: #fff
+    color: vars.$whiteTextColor
     text-align: start
     font-size: 15px
 
@@ -42,14 +44,14 @@
     padding: 3px 7px
     border: 1px solid rgba(255,255,255,.32)
     border-radius: 6px
-    color: #fff
+    color: vars.$whiteTextColor
     font-size: 13px
     font-weight: 500
     font-family: iviSans
     transition: .3s
 
     &:hover
-      border: 1px solid #fff
+      border: 1px solid vars.$whiteTextColor
 
 @media (max-width: 1160px)
   .rating
