--- a/src/components/Movie/MovieInfo/MovieTitle/MovieTitle.module.sass
+++ b/src/components/Movie/MovieInfo/MovieTitle/MovieTitle.module.sass
@@ -1,9 +1,11 @@
+@use "src/styles/vars"
+
 .title
   font-size: 56px
   line-height: 56px
   font-weight: 700
   font-style: normal
-  color: #fff
+  color: vars.$whiteTextColor
   text-align: center
   margin-top: 8px
   margin-bottom: 20px
