--- a/src/components/Movie/MovieInfo/MovieTrailer/MovieTrailer.module.sass
+++ b/src/components/Movie/MovieInfo/MovieTrailer/MovieTrailer.module.sass
@@ -1,3 +1,5 @@
+@use "src/styles/vars"
+
 .trailer
   position: relative
   &::before
@@ -35,7 +37,7 @@
     font-size: 13px
     transition: .3s
     &:hover
-      color: #fff
+      color: vars.$whiteTextColor
 
   &__icon::after
     content: '\E033'
@@ -49,7 +51,7 @@
     position: absolute
 
   &__text
-    color: #fff
+    color: vars.$whiteTextColor
     font-size: 13px
     margin-top: 8px
     text-align: center
@@ -75,7 +77,7 @@
     font-size: 15px
     line-height: 20px
     font-weight: 500
-    color: #fff
+    color: vars.$whiteTextColor
 
   &__subtitle
     font-size: 13px
