feat: add person page

--- a/src/UI/ToggleSwitch/ToggleSwitch.module.sass
+++ b/src/UI/ToggleSwitch/ToggleSwitch.module.sass
@@ -17,6 +17,7 @@
     height: 50px
     background: #231f34
     border-radius: 100px
+    border: 1px solid black
     position: relative
     transition: background-color .2s
 
