--- a/src/components/Person/PersonCard/PersonCard.module.sass
+++ b/src/components/Person/PersonCard/PersonCard.module.sass
@@ -6,18 +6,64 @@
     max-width: 1280px
     width: 100%
     margin: 0 auto
+
+    .header
+      position: relative
+      display: flex
+      font-size: 15px
+      align-items: center
+      color: vars.$whiteTextColor
+      gap: 20px
+      align-self: flex-start
+      margin-left: 30px
+      margin-top: 32px
+      line-height: 20px
+      font-weight: 500
+      cursor: pointer
+
+      &:before
+        position: absolute
+        left: -24px
+        content: "\E040"
+        font-size: 20px
+        font-family: iconfont, sans-serif
+        transition: .1s
+
+      &:hover
+        &:before
+          font-size: 23px
+
     .content
       max-width: 620px
       width: 100%
       margin-inline: auto
+
       .img
         width: 120px
         height: 120px
         overflow: hidden
         border-radius: 16px
+
       .title
         color: vars.$whiteTextColor
         font-size: 56px
         line-height: 56px
         font-style: normal
         font-weight: 700
+        margin-top: 30px
+
+@media (max-width: 880px)
+  .section
+    .container
+      margin: 0
+
+      .content
+        margin: 30px 0 0
+
+@media (max-width: 600px)
+  .section
+    .container
+      .content
+        .title
+          font-size: 40px
+          line-height: 44px
