refactor: change filters types and states

--- a/src/UI/MovieCard/MovieCardDefault/MovieCardDefault.module.sass
+++ b/src/UI/MovieCard/MovieCardDefault/MovieCardDefault.module.sass
@@ -38,10 +38,6 @@
         .content__title
             color: vars.$whiteTextColor
 
-    &__img
-        width: 100%
-        object-fit: cover
-
     &__filter
         position: relative
         transform-origin: 50% 100%
@@ -52,6 +48,7 @@
         justify-content: center
         align-items: center
         transform: scale(1.0001)
+        aspect-ratio: 2/3
 
         &::after
             content: ''
