--- a/src/components/Catalog/Filters/MultiSelector/MultiSelector.module.sass
+++ b/src/components/Catalog/Filters/MultiSelector/MultiSelector.module.sass
@@ -14,6 +14,7 @@
     padding: 20px
     max-width: 180%
     transition: .3s
+    pointer-events: none
 
     &_center
       left: -40%
@@ -27,6 +28,7 @@
     &_active
       opacity: 1
       visibility: visible
+      pointer-events: auto 
 
   &__list
     display: grid
