--- a/src/components/Catalog/Filters/SingleSelector/SingleSelector.module.sass
+++ b/src/components/Catalog/Filters/SingleSelector/SingleSelector.module.sass
@@ -12,10 +12,12 @@
     z-index: 1
     padding: 16px
     width: 100%
+    pointer-events: none
 
     &_active
       opacity: 1
       visibility: visible
+      pointer-events: auto
 
   &__list
     display: grid
