--- a/src/components/Catalog/MoviesList/MoviesList.module.sass
+++ b/src/components/Catalog/MoviesList/MoviesList.module.sass
@@ -5,10 +5,11 @@
   row-gap: 40px
   justify-content: space-between
   padding-block: 10px
-  transition: .4s
+  transition: .5s
 
   &_loading
-    opacity: .3
+    pointer-events: none
+    opacity: .2
 
 @media screen and (max-width: 1160px)
   .list
