--- a/src/components/Person/Filmography/Filmography.module.sass
+++ b/src/components/Person/Filmography/Filmography.module.sass
@@ -39,7 +39,8 @@
             gap: 20px
             .img
               width: 80px
-              height: 123px
+              position: relative
+              aspect-ratio: 2/3
               border-radius: 8px 8px 8px 8px
               overflow: hidden
 
