--- a/src/components/Person/PersonCard/PersonCard.module.sass
+++ b/src/components/Person/PersonCard/PersonCard.module.sass
@@ -40,7 +40,8 @@
 
       .img
         width: 120px
-        height: 120px
+        position: relative
+        aspect-ratio: 2/3
         overflow: hidden
         border-radius: 16px
 
