--- a/src/UI/BreadCrumbs/BreadCrumbs.module.sass
+++ b/src/UI/BreadCrumbs/BreadCrumbs.module.sass
@@ -1,4 +1,5 @@
 @use "src/styles/vars"
+@use "src/styles/mixins"
 
 .section
   padding-top: 25px
@@ -13,6 +14,7 @@
   &__item
     display: flex
     align-items: center
+    max-width: 300px
 
   &__item:not(:first-child)::before
     content: ''
@@ -28,6 +30,9 @@
 
   &__link:hover
     color: vars.$whiteTextColor
+
+  &__current
+    @include mixins.ellipsis
 
 .list_slash
   .list
@@ -73,3 +78,7 @@
 
     .nav
       display: none
+
+  .list
+    &__item
+      max-width: 70%
