feat: add google and vk auth, add adaptive to registration modal

--- a/src/components/ModalWindows/AuthModal/AuthModal.module.sass
+++ b/src/components/ModalWindows/AuthModal/AuthModal.module.sass
@@ -3,5 +3,10 @@
 .chat
   &__container
     background-color: vars.$modalBackground
+    overflow-x: hidden
     @include vars.modalPosition
     @include vars.modalInitAnimation
+.social_auth
+  display: flex
+  gap: 10px
+
