--- a/src/components/ModalWindows/AuthModal/ChatDialogue/ErrorMessage/ErrorMessage.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatDialogue/ErrorMessage/ErrorMessage.module.sass
@@ -6,6 +6,7 @@
   .chat__error
     display: flex
     margin-top: 30px
+    gap: 10px
     width: 100%
     background-color: #ff542e
     padding: 12px 12px 12px
@@ -28,5 +29,9 @@
         svg
           width: 32px
           height: 32px
+
+@media (max-width: 600px)
+  .container
+    width: 100%
 
 
