--- a/src/styles/_vars.sass
+++ b/src/styles/_vars.sass
@@ -22,6 +22,7 @@ $secondaryColor: #a5a1b2
 
 @mixin modalPosition
   position: fixed
+  width: 100%
   display: flex
   height: 100%
   overflow-y: auto
@@ -29,5 +30,4 @@ $secondaryColor: #a5a1b2
   align-items: center
   top: 0
   left: 0
-  width: 100vw
   z-index: 10
