--- a/src/components/ModalWindows/MovieInfoModal/MovieInfoModal.module.sass
+++ b/src/components/ModalWindows/MovieInfoModal/MovieInfoModal.module.sass
@@ -58,6 +58,7 @@
           line-height: 20px
           font-weight: 500
           transition: .3s
+          padding: 10px 0
 
           &:hover
             opacity: 1
@@ -75,7 +76,6 @@
     .card
       margin-left: 100px
       width: 152px
-
 
 @media (max-width: 1160px)
   .wrapper
