--- a/src/components/Movie/MovieInfo/MovieTrailer/MovieTrailer.module.sass
+++ b/src/components/Movie/MovieInfo/MovieTrailer/MovieTrailer.module.sass
@@ -12,8 +12,10 @@
     z-index: 2
   &__img
     display: block
-    width: 100%
     height: auto
+    width: 100%
+    object-fit: cover
+    aspect-ratio: 858/483
 
   &__over
     position: absolute
