--- a/src/components/Home/TopTen/TopTenSlide/TopTenSlide.module.sass
+++ b/src/components/Home/TopTen/TopTenSlide/TopTenSlide.module.sass
@@ -17,8 +17,11 @@
     padding-bottom: 35px
     display: flex
     justify-content: center
+    aspect-ratio: 304/620
     &__wrapper
         position: relative
+        aspect-ratio: 304/620
+        width: 100%
         &::before
             content: ''
             background-image: linear-gradient(0deg,#100e19,rgba(16,14,25,0))
