--- a/src/components/Movie/MovieInfo/MovieInfoDesktop/MovieInfoDesktop.module.sass
+++ b/src/components/Movie/MovieInfo/MovieInfoDesktop/MovieInfoDesktop.module.sass
@@ -15,3 +15,11 @@
 .trailer__sticky
   position: sticky
   top: 32px
+
+.option
+  &__span
+    margin-right: 8px
+
+.badge
+  &:not(:first-child)
+    margin-left: 8px
