--- a/src/components/Movie/MovieInfo/MovieInfoMobile/MovieInfoMobile.module.sass
+++ b/src/components/Movie/MovieInfo/MovieInfoMobile/MovieInfoMobile.module.sass
@@ -13,6 +13,32 @@
     width: 34%
     padding-left: 40px
 
+.button
+  width: 100%
+  margin-bottom: 16px
+  &__text
+    margin-left: 6px
+
+  &__icon
+    display: flex
+    align-items: center
+    &::after
+      font-family: iconfont
+      font-weight: 400
+      font-style: normal
+      font-size: 16px
+
+    &_film::after
+      content: "\E07B"
+
+.badge
+  &:not(:first-child)
+    margin-left: 8px
+
+.option
+  span
+    margin-left: 8px
+
 @media (max-width: 880px)
   .mobile
     &__row
