--- a/src/components/Movie/WatchAllDevices/WatchAllDevices.module.sass
+++ b/src/components/Movie/WatchAllDevices/WatchAllDevices.module.sass
@@ -62,6 +62,7 @@
         width: 337px
         height: 192px
         border-radius: 2px
+        object-fit: cover
 
       &__tablet
         position: absolute
@@ -71,6 +72,7 @@
         height: 102px
         border-radius: 4px
         z-index: 1
+        object-fit: cover
 
 @media (max-width: 755px)
   .wrapper
