--- a/src/components/Movie/MovieInfo/MovieMedallions/MovieMedallions.module.sass
+++ b/src/components/Movie/MovieInfo/MovieMedallions/MovieMedallions.module.sass
@@ -63,7 +63,7 @@
     overflow: hidden
     white-space: nowrap
     font-weight: 400
-    width: 100%
+    width: 90%
     &:not(:last-child)
       margin-top: 8px
 
@@ -85,10 +85,11 @@
       width: 36px
       height: 36px
 
-    &__text
+    &__title
       font-size: 10px
-      margin-top: 4px
       line-height: 12px
+      &:not(:last-child)
+        margin-top: 4px
 
   .medallions
     max-height: 72px
