--- a/src/components/Movie/MovieInfo/MovieTrailer/MovieTrailer.module.sass
+++ b/src/components/Movie/MovieInfo/MovieTrailer/MovieTrailer.module.sass
@@ -66,6 +66,22 @@
     bottom: 16px
     left: 16px
 
+  &__button
+    background-color: vars.$accent
+    width: 88px
+    height: 88px
+    display: flex
+    align-items: center
+    justify-content: center
+    border-radius: 100%
+    cursor: pointer
+
+    &::after
+      content: "\E2CF"
+      font-family: iconfont
+      font-size: 40px
+      color: vars.$whiteTextColor
+
 .button
   opacity: 0.8
   height: auto
