--- a/src/UI/Creator/Creator.module.sass
+++ b/src/UI/Creator/Creator.module.sass
@@ -9,14 +9,19 @@
 
   &_large
     width: 128px
+    padding: 0 12px
 
     .wrapper
-      width: 128px
-      height: 128px
-      aspect-ratio: 298/357
+      width: 100%
+      height: 100%
+      aspect-ratio: 1/1
 
     .title
       font-size: 15px
+
+  &:hover
+    .title
+      color: vars.$whiteTextColor
 
 .wrapper
   width: 88px
@@ -71,6 +76,11 @@
     background-color: #272038
     color: #d9d4ee
 
+@media (max-width: 1160px)
+  .creator
+    &_large
+      width: 25%
+
 @media (max-width: 600px)
   .creator
     width: 72px
@@ -81,3 +91,10 @@
       &__img
         width: 72px
         height: 72px
+
+    &_large
+      width: 88px
+      padding: 0 8px
+      .wrapper
+        width: 100%
+        height: 100%
