--- a/src/components/Movie/WatchAllDevices/WatchAllDevices.module.sass
+++ b/src/components/Movie/WatchAllDevices/WatchAllDevices.module.sass
@@ -63,6 +63,7 @@
         height: 192px
         border-radius: 2px
         object-fit: cover
+        aspect-ratio: 337/192
 
       &__tablet
         position: absolute
@@ -73,6 +74,7 @@
         border-radius: 4px
         z-index: 1
         object-fit: cover
+        aspect-ratio: 188/102
 
 @media (max-width: 755px)
   .wrapper
