--- a/src/components/Catalog/Filters/PersonSelector/PersonSelector.module.sass
+++ b/src/components/Catalog/Filters/PersonSelector/PersonSelector.module.sass
@@ -1,4 +1,5 @@
-@use "src/styles/vars"
+@use "/src/styles/vars"
+@use "/src/styles/mixins"
 
 .selector
   display: grid
@@ -8,19 +9,34 @@
   &__input
     display: flex
     align-items: center
+    justify-content: space-between
     width: 100%
     background-color: #312b45
     height: 56px
     border-radius: 4px
     padding: 8px 16px
-    font-weight: 500
-    overflow: hidden
-    white-space: nowrap
-    text-overflow: ellipsis
-    color: vars.$whiteTextColor
 
-    &::placeholder
+    & > input
+      font-weight: 500
+      color: vars.$whiteTextColor
+      background: transparent
+      @include mixins.ellipsis
+      width: 80%
+
+    & > input::placeholder
       color: rgba(255, 255, 255, .6)
+
+  &__reset
+    height: 100%
+    width: 50px
+    cursor: pointer
+    position: absolute
+    right: 0
+    color: vars.$textcolor
+    transition: .4s
+
+    &:hover
+      color: vars.$whiteTextColor
       
 .dropdown
   &-enter
