--- a/src/UI/MovieCard/MovieCardDefault/MovieCardDefault.module.sass
+++ b/src/UI/MovieCard/MovieCardDefault/MovieCardDefault.module.sass
@@ -25,6 +25,7 @@
     &__title
         white-space: nowrap
         @include mixins.ellipsis()
+        transition: .3s
 
     &:hover
         .content__filter
