--- a/src/components/Layout/Header/ActionLayout/ActionLayout.module.sass
+++ b/src/components/Layout/Header/ActionLayout/ActionLayout.module.sass
@@ -8,3 +8,13 @@
     position: absolute
     right: 450px
     bottom: 8px
+
+@media (max-width: 1160px)
+  .container
+    .switch
+      right: 360px
+
+@media (max-width: 600px)
+  .container
+    .switch
+      right: 100px
