--- a/src/UI/ToggleSwitch/ToggleSwitch.module.sass
+++ b/src/UI/ToggleSwitch/ToggleSwitch.module.sass
@@ -1,53 +1,44 @@
 @use '/src/styles/vars'
 
-.container
-  user-select: none
-  .checkbox
-    height: 0
-    width: 0
-    visibility: hidden
+.toggle
+  display: flex
+  align-items: center
+  justify-content: space-between
+  cursor: pointer
+  width: 90px
+  height: 45px
+  background: #231f34
+  border-radius: 100px
+  outline: 1px solid black
+  position: relative
+  transition: background-color .2s
 
+  &_active
+    pointer-events: none
+    opacity: .7
 
-  .label
-    display: flex
-    align-items: center
-    justify-content: space-between
-    cursor: pointer
-    width: 100px
-    height: 50px
-    background: #231f34
-    border-radius: 100px
-    border: 1px solid black
-    position: relative
-    transition: background-color .2s
+  &__left, &__right
+    color: vars.$secondaryColor
 
-    .left__item, .right__item
-      color: vars.$secondaryColor
+  &__left
+    margin-left: 11px
 
-    .left__item
-      margin-left: 13px
+  &__right
+    margin-right: 11px
 
-    .right__item
-      margin-right: 13px
-
-
-  .label .button
-    content: ''
+  &__button
     position: absolute
-    top: 2px
-    left: 2px
+    top: 0 
     width: 45px
-    height: 45px
-    border-radius: 45px
-    transition: 0.2s
-    opacity: 0.15
+    height: 100%
+    border-radius: 50%
+    transition: .3s
+    opacity: .15
     background: vars.$whiteTextColor
     box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29)
 
-  .checkbox:checked + .label .button
-    left: calc(100% - 2px)
-    transform: translateX(-100%)
-
-
-  .label:active .button
-    width: 60px
+    &_left
+      left: 0
+      
+    &_right
+      left: calc(100% - 45px)
