feat: custom title types

--- a/src/UI/MovieSlider/MovieSlider.module.sass
+++ b/src/UI/MovieSlider/MovieSlider.module.sass
@@ -7,14 +7,6 @@
     margin: 0 -20px
     padding: 20px
 
-.title
-    font-size: 24px
-    color: vars.$whiteTextColor
-    display: flex
-    align-items: center
-    line-height: 28px
-    font-weight: 700
-
 .icon::after
     content: "\E046"
     display: inline-block
@@ -31,4 +23,4 @@
 
 @media (max-width: 600px)
     .title
-        font-size: 20px
+        display: block
