--- a/src/components/Movie/MovieInfo/MovieInfoDesktop/MovieInfoDesktop.module.sass
+++ b/src/components/Movie/MovieInfo/MovieInfoDesktop/MovieInfoDesktop.module.sass
@@ -23,3 +23,9 @@
 .badge
   &:not(:first-child)
     margin-left: 8px
+
+.title
+  text-align: center
+  margin-top: 8px
+  margin-bottom: 20px
+  padding: 0 12px
