--- a/src/components/Catalog/MoviesList/MoviesList.module.sass
+++ b/src/components/Catalog/MoviesList/MoviesList.module.sass
@@ -11,6 +11,11 @@
     pointer-events: none
     opacity: .2
 
+  &__text
+    display: flex
+    justify-content: center
+    margin-top: 10px
+
 @media screen and (max-width: 1160px)
   .list
     grid-template-columns: repeat(6, minmax(120px, 100%))
