--- a/src/components/Catalog/Filters/PersonSelector/PersonList/PersonList.module.sass
+++ b/src/components/Catalog/Filters/PersonSelector/PersonList/PersonList.module.sass
@@ -8,6 +8,8 @@
   z-index: 1
   top: 60px
   width: 100%
+  max-height: 380px
+  overflow: auto
 
   &__item
     display: grid
@@ -29,3 +31,7 @@
 
   &__name
     @include mixins.ellipsis
+
+  &__text
+    display: flex
+    justify-content: center
