--- a/src/components/Person/Filmography/Filmography.module.sass
+++ b/src/components/Person/Filmography/Filmography.module.sass
@@ -1,4 +1,5 @@
 @use "src/styles/vars"
+@use "src/styles/mixins"
 
 .section
   .container
@@ -54,6 +55,10 @@
             align-items: center
 
             .info
+              .name, .year, .rating
+                @include mixins.ellipsis
+                max-width: 350px
+
               .year, .name
                 color: vars.$whiteTextColor
                 font-size: 15px
