feat: add logout button

--- a/src/components/Layout/Header/DropDown/ProfileDropDown/ProfileDropDown.module.sass
+++ b/src/components/Layout/Header/DropDown/ProfileDropDown/ProfileDropDown.module.sass
@@ -47,6 +47,11 @@
     button
       margin-right: 10px
 
+    &_logs
+      display: flex
+      flex-direction: column
+      gap: 20px
+
     &_links
       display: flex
       flex-direction: column
