--- a/src/UI/ModalInput/ModalInput.module.sass
+++ b/src/UI/ModalInput/ModalInput.module.sass
@@ -1,4 +1,5 @@
 @use "/src/styles/vars"
+@use "/src/styles/mixins"
 
 @mixin inputFont
   font-size: 15px
@@ -58,17 +59,15 @@
           color: rgba(255, 84, 46, .16)
 
   &__placeholder
+    width: 50%
     color: vars.$secondaryColor
     position: absolute
     transform-origin: 0 0
     z-index: 2
     @include inputFont
+    @include mixins.ellipsis
     font-weight: 500
     transition: .3s
-    overflow: hidden
-    white-space: nowrap
-    text-overflow: ellipsis
-    will-change: transform
     pointer-events: none
     top: 10px
     left: 29px
