--- a/src/components/ModalWindows/AuthModal/ChatHeader/ChatHeader.module.sass
+++ b/src/components/ModalWindows/AuthModal/ChatHeader/ChatHeader.module.sass
@@ -12,6 +12,9 @@
     justify-content: center
     align-items: center
 
+  &__text
+    text-align: center
+
   &__title
     color: vars.$whiteTextColor
     font-size: 15px
@@ -41,3 +44,8 @@
       height: 100%
       background-color: #ea003d
       transition: .3s
+
+@media (max-width: 400px)
+  .header__content
+    padding-inline: 10px
+    justify-content: space-between
